fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -57,9 +57,8 @@ table {
 body {
     background: var(--secundary-color);
     font-family: var(--primary-font);
-    overflow-x: hidden;
 }
 
-.root {
+html, body {
     overflow-x: hidden;
 }
